--- a/landing_page/package.json
+++ b/landing_page/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.24.0",
     "@amplitude/analytics-node": "^1.5.6",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@radix-ui/react-slot": "^1.2.3",
@@ -19,6 +20,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1"
   },
