--- a/functions/package.json
+++ b/functions/package.json
@@ -16,9 +16,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/tasks": "^6.2.0",
+    "@google/genai": "^1.5.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
-    "@google/genai": "^1.5.0"
+    "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
