--- a/landing_page/package.json
+++ b/landing_page/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.24.0",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "@amplitude/analytics-node": "^1.5.6",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@radix-ui/react-slot": "^1.2.3",
